--- a/index.html
+++ b/index.html
@@ -1,67 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cricket Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {},
-      }
-    }
-  </script>
 </head>
 <body class="bg-gray-100 text-gray-800">
 
-  <!-- Header with Navbar -->
-  <header class="bg-green-700 text-white shadow-md">
-    <div class="max-w-6xl mx-auto p-4 flex justify-between items-center">
+  <!-- Header -->
+  <header class="bg-green-700 text-white p-4 shadow-md">
+    <div class="max-w-6xl mx-auto flex justify-between items-center">
       <h1 class="text-2xl font-bold">🏏 Cricket Dashboard</h1>
 
-      <!-- Hamburger Button (Mobile) -->
-      <button id="menu-btn" class="sm:hidden text-white focus:outline-none">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2"
-             viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round"
-                d="M4 6h16M4 12h16M4 18h16"/>
+      <!-- Mobile Menu Button -->
+      <button id="menuBtn" class="sm:hidden text-white focus:outline-none">
+        <svg class="w-6 h-6 fill-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M4 6h16M4 12h16M4 18h16" />
         </svg>
       </button>
-
-      <!-- Navigation Links (Desktop) -->
-      <nav class="hidden sm:flex gap-6">
-        <a href="#" class="hover:underline">Live</a>
-        <a href="#" class="hover:underline">Schedule</a>
-        <a href="#" class="hover:underline">Stats</a>
-      </nav>
     </div>
 
     <!-- Mobile Menu -->
-    <div id="mobile-menu" class="sm:hidden hidden px-4 pb-4">
-      <a href="#" class="block py-2 hover:underline">Live</a>
-      <a href="#" class="block py-2 hover:underline">Schedule</a>
-      <a href="#" class="block py-2 hover:underline">Stats</a>
-    </div>
+    <nav id="mobileMenu" class="sm:hidden hidden mt-2">
+      <ul class="space-y-2">
+        <li><a href="#" class="block px-4 py-2 hover:bg-green-600">Live Score</a></li>
+        <li><a href="#" class="block px-4 py-2 hover:bg-green-600">Matches</a></li>
+        <li><a href="#" class="block px-4 py-2 hover:bg-green-600">Players</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <!-- Main Content -->
+  <!-- Main Container -->
   <main class="p-4 max-w-6xl mx-auto space-y-6">
-    <!-- your dashboard sections here (live score, schedule, stats) -->
+
+    <!-- Live Score -->
     <section class="bg-white p-4 rounded-lg shadow-md">
       <h2 class="text-xl font-semibold mb-2">Live Score</h2>
-      <p>India 🇮🇳 256/4 vs Australia 🇦🇺</p>
+      <div class="flex justify-between items-center flex-wrap gap-2">
+        <div class="flex-1">
+          <p class="text-lg font-medium">India 🇮🇳 vs Australia 🇦🇺</p>
+          <p class="text-gray-600">2nd ODI • Mumbai</p>
+        </div>
+        <div class="text-right">
+          <p class="text-2xl font-bold text-green-600">IND 256/4 (38.2)</p>
+          <p class="text-sm text-gray-600">Target: 280</p>
+        </div>
+      </div>
     </section>
+
+    <!-- Match Schedule -->
+    <section class="bg-white p-4 rounded-lg shadow-md overflow-x-auto">
+      <h2 class="text-xl font-semibold mb-2">Upcoming Matches</h2>
+      <table class="w-full text-sm">
+        <thead>
+          <tr class="bg-gray-200 text-left">
+            <th class="p-2">Date</th>
+            <th class="p-2">Match</th>
+            <th class="p-2">Venue</th>
+            <th class="p-2">Time</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="border-b">
+            <td class="p-2">June 1</td>
+            <td class="p-2">India vs Pakistan</td>
+            <td class="p-2">Ahmedabad</td>
+            <td class="p-2">7:00 PM</td>
+          </tr>
+          <tr class="border-b">
+            <td class="p-2">June 5</td>
+            <td class="p-2">Australia vs England</td>
+            <td class="p-2">Melbourne</td>
+            <td class="p-2">1:30 PM</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+    <!-- Player Stats -->
+    <section class="bg-white p-4 rounded-lg shadow-md">
+      <h2 class="text-xl font-semibold mb-4">Top Performers</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+        <!-- Player Card -->
+        <div class="bg-green-100 p-3 rounded-lg text-center">
+          <p class="font-bold">Virat Kohli</p>
+          <p>Runs: 87</p>
+        </div>
+        <div class="bg-yellow-100 p-3 rounded-lg text-center">
+          <p class="font-bold">Bumrah</p>
+          <p>Wickets: 3</p>
+        </div>
+        <div class="bg-blue-100 p-3 rounded-lg text-center">
+          <p class="font-bold">Steve Smith</p>
+          <p>Runs: 72</p>
+        </div>
+      </div>
+    </section>
+
   </main>
 
+  <!-- Footer -->
   <footer class="bg-green-700 text-white text-center p-4 mt-6">
     &copy; 2025 Cricket Dashboard. All rights reserved.
   </footer>
 
-  <!-- Script to Toggle Mobile Menu -->
+  <!-- Mobile Menu Toggle Script -->
   <script>
-    const menuBtn = document.getElementById('menu-btn');
-    const mobileMenu = document.getElementById('mobile-menu');
+    const menuBtn = document.getElementById('menuBtn');
+    const mobileMenu = document.getElementById('mobileMenu');
 
     menuBtn.addEventListener('click', () => {
       mobileMenu.classList.toggle('hidden');
